--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://apis.google.com/js/api.js"></script>
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
 <body>
@@ -41,9 +42,9 @@
         <iframe name="dummyframe" id="dummyframe" style="display: none;"></iframe>
         <div class="new-app hidden">
             <form id="app_form" target="dummyframe" method="POST">
-                <input disabled type="number" id="id" name="id">
-                <input type="text" id="topic" name="topic">
-                <input type="password" id="password" name="password">
+                <input type="text" id="id" name="id">
+                <input type="text" id="topic" name="topic" placeholder="nieuw onderwerp">
+                <input type="password" id="password" name="password" placeholder="nieuw trefwoord">
                 <button id="app_submit" type="submit">submit</button>
             </form>
         </div>
@@ -58,6 +59,29 @@
                 <div class="pass_input hidden">
                     <input type="password" id="pass" placeholder="trefwoord">
                     <button id="unlock">ontgrendelen</button>
+                </div>
+            </div>
+        </div>
+        <div class="loading">
+            <div class="container">
+                <div class="quarter q-1"></div>
+                <div class="quarter q-2"></div>
+                <div class="quarter q-3"></div>
+                <div class="quarter q-4"></div>
+                <div class="cover">
+                    <div class="content">
+                        <div class="s-quarter sq-1"></div>
+                        <div class="s-quarter sq-2"></div>
+                        <div class="s-quarter sq-3"></div>
+                        <div class="s-quarter sq-4"></div>
+                        <div class="s-cover"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="text">
+                <h3>loading...</h3>
+                <div class="text-cover">
+                    <div class="text-cover-filler">|</div>
                 </div>
             </div>
         </div>
